Compiler fixes